# jk2mv

./: CMakeLists.txt
assets/jk2pro/: CMakeLists.txt
assets/jk2pro/gfx/2d/: mp_yteam_symbol.tga
assets/jk2pro/icons/: iconf_neutral1.tga  iconf_neutral1_x.tga
assets/jk2pro/models/flags/: n_flag.md3
assets/jk2pro/shaders/: ctf3_yellowteam.shader
assets/jk2pro/ui/: jk2mpingame.txt
assets/jk2pro/ui/jk2mp/: ingame.menu  ingame_camera.menu  ingame_server.menu
src/: CMakeLists.txt  mv_setup.h.in
src/api/: mvapi.h
src/client/: FxPrimitives.cpp  FxSystem.cpp  FxSystem.h  FxUtil.cpp  cl_cgame.cpp  cl_console.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  snd_dma.cpp
src/qcommon/: common.cpp  cvar.cpp  files.cpp  q_shared.h  qcommon.h
src/renderer/: tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_font.cpp  tr_image.cpp  tr_init.cpp  tr_local.h
src/sdl/: sdl_input.cpp  sdl_window.cpp
src/sys/: con_win32.cpp  sys_public.h  sys_win32.cpp
